modify for fight random pokemon if fern is choose and a trainer if tar is choose